# workmate_testing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: enums.py  main.py
app/commands/: aggregate.py  sorting.py  where.py
app/core/: config.py  csv_helper.py  parser.py
tests/: conftest.py
tests/fixtures/: parser.py
tests/unit/: test_csv.py  test_parser.py
tests/unit/commands/: test_aggregate.py  test_sorting.py  test_where.py
