[tool.poetry]
name = "workmate-testing"
version = "0.1.0"
description = ""
authors = ["Fedorov Semen <FedorovSemen28@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
